# SJCServer

./: .gitignore  .install.sh.swp  00web.conf  1  Arranca_Sala.py  README.md  SJCServer.service  SJC_Server.py  changelog  client_secrets.json_bk  config.py  config.py.sample  globals.py  gunicorn.conf.py  install.sh  kk  requirements.txt  setup.cfg  start.sh
APP/: Index.html
APP/css/: CSS.css
APP/js/: BaseScript.js
OV_ctl/: OV_ctl.py
Telegram/: Telegram_funcs.py
broadlink/: broadlink_mqtt.service  custom.conf  install.sh  logging.conf  mqtt.py
broadlink/commands/: proyectoron
chrome/: Logon.py  Logon.py.old  geckourl  kk  test.py
creds/: Interno-oauth2.json.bk  Placeholder  readme.md
dockers/: 0webdav.conf  SJCServer.service  crea_gateone.sh  crea_nginc.sh  crea_unifi.sh  git_commands  index.html.1  install.sh  lineas_crontab_root  lineas_crontab_user  nginxuser.tgz  obs-websocket_4.5.1-1_amd64.deb  sshaps
downloader/: YXvRJcVJ7v4.html  descarga.py
mqtt/: mqtt_ctl.py  mqtt_ctl_cmd.py
obs-studio/: global.ini
obs-studio/logs/: 2021-02-04 21-38-07.txt  2021-02-04 21-41-29.txt  2021-02-04 21-49-13.txt  2021-02-04 22-14-22.txt  2021-02-04 22-17-00.txt  2021-02-04 22-28-34.txt  2021-02-07 09-54-02.txt  (+3 more)
obsctl/: ctltst.py  obsctl.py
player/: Chrome.py  FireTv.py  Raspi.py  chrome_test.py
tools/: Arranca_Sala.py  Checker.py  Get_Credentials.py  GrabaIR.py  GrabaRF.py  Para_Sala.py  chk.sh  confiar.sh  powerchk.py  sala.sh  stop_sala.sh  vlog
tst/: app.tgz  test.html
yt_functions/: yt_functions.py  yt_functions.py-oauth2.json
(+11 files in other folders)
