[metadata]
# Alejandro Ruiz-Oriol del Cacho
name = SJC_SERVER
version = 1.0.0
url = https://github.com/Chanete/SJC_SERVER
author = Alejandro e Ignacio Ruiz-Oriol
author_email = aruizori@itelsys.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Servidor gestion de emision de misas de la Parroquia San Juan Crisostomo
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7